# Python-pkg

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: available_methods.md  basic_usage.py  example.py  filter_examples.py  other_IRW_databases.py
src/irw/: __init__.py  api.py  client.py  config.py
src/irw/operations/: __init__.py  fetch.py  filter.py  filter_info.py  info.py  list_tables.py
src/irw/utils/: __init__.py  long2resp.py  table_helpers.py
src/irw/utils/redivis/: __init__.py  cache.py  datasets.py  item_text.py  table_metadata.py
src/irw_py/: __init__.py  _fetch_helpers.py  _io.py  client.py  config.py  mixin_explore.py  mixin_fetch.py
src/irw_py/core/: __init__.py  specialized.py
src/irw_py/operations/: __init__.py  fetch.py  filter.py  filter_info.py  info.py  list_tables.py
src/irw_py/utils/: __init__.py
src/irw_py/utils/redivis/: __init__.py  cache.py  datasets.py  item_text.py  table_metadata.py  tables.py
