[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irw"
version = "0.0.1"
authors = [
  { name="Hansol Lee", email="hansol@stanford.edu" },
  { name="Ben Domingue", email="bdomingu@stanford.edu" }
]
description = "A Python package for the Item Response Warehouse (IRW)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "redivis",
    "pandas",
    "numpy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://itemresponsewarehouse.org/"
Issues = "https://github.com/itemresponsewarehouse/Python-pkg/issues"