[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irw"
version = "0.0.1"
authors = [
  { name="Hansol Lee", email="hansol@stanford.edu" },
  { name="Ben Domingue", email="bdomingu@stanford.edu" }
]
description = "A Python package for the Item Response Warehouse (IRW)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "redivis>=0.18.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "setuptools>=65.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]


license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://itemresponsewarehouse.org/"
Issues = "https://github.com/itemresponsewarehouse/Python-pkg/issues"